# .claude

./: .gitignore  CLAUDE.md  CODING_MEMORY.md  PORTS.md  README.md  SETUP.md  settings.json  stats-cache.json  statusline-command.falsify.py  statusline-command.sh  statusline-command.test.sh
agents/: compliance-judge.md  observability-judge.md  pane-echo.md  standards-extractor.md
chrome/: chrome-native-host
coding-memory/: decisions.md  pr-tracking.md  session-log.md
commands/: commit-message.md  explain-codebase.md  handoff.md  pr-description.md  review.md  security-scan.md
hooks/: README.md  checkpoint-before-modify.sh  context-handoff-watch.sh  context-handoff-watch.test.sh  doc-guard.sh  git-guard.sh  judge-guard.sh  judge-guard.test.sh  memsearch-nudge.sh  memsearch-nudge.test.sh  merge-guard.sh  pane-dispatch-guard.sh  pane-dispatch-guard.test.sh  require-project-standards.sh  scan-invisible-unicode.sh  scan-secrets.sh
memsearch/: README.md  config.json  pyproject.toml
memsearch/memsearch/: chunk.py  cli.py  config.py  db.py  digest.py  eval.py  extract.py  index.py  ollama.py  rename.py  search.py  status.py
memsearch/tests/: conftest.py  golden_queries.json  test_chunk.py  test_cli.py  test_config.py  test_db.py  test_digest.py  test_eval.py  test_extract.py  test_golden_queries.py  test_index.py  test_ollama.py  test_rename_status.py  test_search.py
panes/: adapters.test.sh  cmux-layout-probe.sh  cmux-tab-probe.sh  dispatch-pane-agent.sh  dispatch-pane-agent.test.sh  handoff-wrapper.sh  inprocess-agents.conf  redirect-agents.conf  (+4 more)
(+173 files in other folders)
